[metadata]
name = 'oneview-monasca'
version = 1.1
summary = Monasca OneView Daemon
description-file = README.md
author = LSD
author-email = monasca@lsd.ufcg.edu.br
home-page = http://www.lsd.ufcg.edu.br
url= 'https://git.lsd.ufcg.edu.br/oneview-monasca/oneview-monasca'
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7.9


[files]
packages = oneview_monasca


[entry_points]
console_scripts =
    oneview-monasca = oneview_monasca.shell:main
