[metadata]
name = oneview-monasca
version = 0.1.1
summary = Monasca OneView Daemon
description-file = README.md
author = LSD
author-email = monasca@lsd.ufcg.edu.br
home-page = https://github.com/HewlettPackard/oneview-monasca
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7


[files]
packages = oneview_monasca


[entry_points]
console_scripts =
    oneview-monasca = oneview_monasca.shell:main
