[metadata]
name = ovm-ironic
version = 0.1
summary = Plugin to manage nodes of interest in Ironic
description-file = README.md
author = LSD
author-email = monasca@lsd.ufcg.edu.br
home-page = https://github.com/HewlettPackard/oneview-monasca
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7


[files]
packages = ovm_ironic


[entry_points]
node_discovery.driver =
    ovm_ironic = ovm_ironic.driver.ironic:DiscoveryNodeIronicProvider
