[metadata]
name = ovm-serverlist
version = 0.1
summary = Plugin to Helion Lifecycle Management servers
description-file = README.md
author = LSD
author-email = monasca@lsd.ufcg.edu.br
home-page = http://www.lsd.ufcg.edu.br
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7.9


[files]
packages = ovm_serverlist

[entry_points]
node_discovery.driver =
    plugin_serverlist = ovm_serverlist.driver.server_list:DiscoveryNodeServerListProvider
