[metadata]
name = ovm-serverlist
summary = Plugin to Helion Lifecycle Management servers
description-file = README.md
author = LSD
author-email = monasca@lsd.ufcg.edu.br
home-page = https://github.com/HewlettPackard/oneview-monasca
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7


[files]
packages = ovm_serverlist

[entry_points]
node_discovery.driver =
    plugin_serverlist = ovm_serverlist.driver.server_list:DiscoveryNodeServerListProvider
